welcome.lessons.welcome.bat.bool2.FizzBuzz.scala.error
fizzBuzz:7: error: unclosed string literal
			return "Fizz
                               ^fizzBuzz:10: error: unclosed string literal
				return "Fizz Buzz
                                       ^fizzBuzz:12: error: unclosed string literal
				return "Buzz
                                       ^